--- a/experiments/configs/color_mnist_count_incomplete.yaml
+++ b/experiments/configs/color_mnist_count_incomplete.yaml
@@ -1224,7 +1224,7 @@ runs:
     training_intervention_prob: [[0.25, 0.5, 0.75, 1]] #[0.25, [0.25, 0.5]] #[0.25, [0.25, 0.5]]
     emb_size: [128, 64] #[256, 128] # CHANGING CAUSE GPU MEMORY IS NOT ENOUGH
     embedding_activation: null
-    n_discovered_concepts: [5, 2, 0] #[10, 5, 0] # CHANGING CAUSE GPU MEMORY IS NOT ENOUGH
+    n_discovered_concepts: [5, 2, 1, 0] #[10, 5, 0] # CHANGING CAUSE GPU MEMORY IS NOT ENOUGH
     concept_loss_weight: [0.1, 1, 10]
     contrastive_loss_weight: [0] #, 1]
     mix_ground_truth_embs: True
@@ -1232,7 +1232,7 @@ runs:
     normalize_embs: False
     sample_probs: False
     cond_discovery: False
-    intermediate_task_concept_loss: [0] #[1, 0.5, 0.1] #, 0.1, 1]
+    intermediate_task_concept_loss: [0, 0.1] #[1, 0.5, 0.1] #, 0.1, 1]
     task_concept_loss: 1
     intervention_task_discount: [1.1, 1.5] #[1.01, 1.1, 1.5]
     discovered_probs_entropy: 0
