--- a/experiments/configs/mixcem_celeba.yaml
+++ b/experiments/configs/mixcem_celeba.yaml
@@ -1,10 +1,12 @@
 trials: 3
 results_dir: /anfs/bigdisc/me466/mixcem_results/celeba/
 model_selection_groups:
+  - ["^(DNN).*$", "DNN (Baseline)"]
   - ["^(CBM_Sigmoid_Baseline_).*$", "Joint CBM (Baseline)"]
-  - ["^(Hybrid-CBM_).*(_Baseline_).*$", "Hybrid-CBM (Baseline)"]
-  - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
-  - ["^(IntCEM_).*(_Baseline).*$", "IntCEM (Baseline)"]
+  - ["^(CBM_Logit_Baseline_).*$", "Joint Logit CBM (Baseline)"]
+  - ["^(Hybrid-CBM_).*$", "Hybrid-CBM (Baseline)"]
+  - ["^(CEM).*$", "CEM (Baseline)"]
+  - ["^(IntCEM_).*$", "IntCEM (Baseline)"]
   - ["^(MixCEM_).*(_Baseline).*$", "MixCEM (Baseline)"]
   - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
 
@@ -136,7 +138,7 @@ runs:
     training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
     emb_size: [64, 32]
     embedding_activation: null
-    n_discovered_concepts: [50, 25]
+    n_discovered_concepts: [100, 50, 25]
     concept_loss_weight: [10]
     contrastive_loss_weight: [0]
     mix_ground_truth_embs: True
@@ -227,8 +229,8 @@ runs:
     init_negative_scale: 5
     init_shift: 5
     pretrained: True
-    hidden_dim: [16]
-    class_hidden_dim: [64] #128]
+    hidden_dim: [16, 32]
+    class_hidden_dim: [32, 64] #128]
     intervention_prob: 0.5
     gradient_clip_val: 2.0
     max_concept_epochs: 70
