--- a/experiments/configs/cub_mixcem_incomplete.yaml
+++ b/experiments/configs/cub_mixcem_incomplete.yaml
@@ -7,6 +7,7 @@ model_selection_groups:
   - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
   - ["^(IntCEM_).*(_Baseline).*$", "IntCEM (Baseline)"]
   - ["^(MixCEM_).*(_Baseline).*$", "MixCEM (Baseline)"]
+  - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
 
 
 model_selection_metrics:
@@ -78,9 +79,58 @@ shared_params:
             name: random_noise
             low_noise_level: 1
             noise_level: 0.5
-
+      - name: "OOD_heavy"
+        update_previous: True
+        dataset_config:
+          test_transformation_config:
+            name: random_noise
+            low_noise_level: 1
+            noise_level: 0.75
+      - name: "OOD_heavier"
+        update_previous: True
+        dataset_config:
+          test_transformation_config:
+            name: random_noise
+            low_noise_level: 1
+            noise_level: 0.95
 
 runs:
+
+  - architecture: 'ConceptEmbeddingModel'
+    run_name: "DNN"
+    sigmoidal_prob: True
+    training_intervention_prob: 0
+    concept_loss_weight: [0]
+    embedding_activation: "leakyrelu"
+
+  - architecture: 'ProbabilisticConceptBottleneckModel'
+    run_name: "ProbCBM_cwl_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_n_samples_inference_{n_samples_inference}_max_concept_epochs_{max_concept_epochs}_max_task_epochs_{max_task_epochs}"
+    n_samples_inference: 50
+    use_neg_concept: True
+    pred_class: True
+    init_negative_scale: 5
+    init_shift: 5
+    pretrained: True
+    hidden_dim: [16, 32]
+    class_hidden_dim: [128, 256]
+    intervention_prob: 0.5
+    gradient_clip_val: 2.0
+    max_concept_epochs: 70
+    warmup_epochs: 5
+    max_task_epochs: 75
+    vib_beta: 0.00005
+    concept_loss_weight: [1]
+    learning_rate: 0.001
+    lr_ratio: 10
+    weight_decay: 0
+    weight_loss: False
+    optimizer: adam
+    grid_variables:
+      - concept_loss_weight
+      - class_hidden_dim
+      - hidden_dim
+    grid_search_mode: exhaustive
+
   - architecture: 'ConceptEmbeddingModel'
     run_name: "CEM_Baseline_cwl_{concept_loss_weight}"
     sigmoidal_prob: True
