--- a/experiments/configs/mixcem_waterbirds_complete.yaml
+++ b/experiments/configs/mixcem_waterbirds_complete.yaml
@@ -17,7 +17,7 @@ shared_params:
   dataset_config:
     dataset: "waterbirds"
     num_workers: 8
-    batch_size: 64
+    batch_size: 256
 
     # DATASET VARIABLES
     root_dir: /anfs/bigdisc/me466/waterbirds
@@ -81,20 +81,20 @@ shared_params:
             name: random_noise
             low_noise_level: 1
             noise_level: 0.5
-      - name: "OOD_heavy"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            name: random_noise
-            low_noise_level: 1
-            noise_level: 0.75
-      - name: "OOD_heavier"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            name: random_noise
-            low_noise_level: 1
-            noise_level: 0.95
+      # - name: "OOD_heavy"
+      #   update_previous: True
+      #   dataset_config:
+      #     test_transformation_config:
+      #       name: random_noise
+      #       low_noise_level: 1
+      #       noise_level: 0.75
+      # - name: "OOD_heavier"
+      #   update_previous: True
+      #   dataset_config:
+      #     test_transformation_config:
+      #       name: random_noise
+      #       low_noise_level: 1
+      #       noise_level: 0.95
 
 
 runs:
