Adding latest waterbirds config.

--- a/experiments/configs/mixcem_waterbirds_complete.yaml
+++ b/experiments/configs/mixcem_waterbirds_complete.yaml
@@ -5,6 +5,7 @@ model_selection_groups:
   - ["^(CBM_Sigmoid_Baseline_).*$", "Joint CBM (Baseline)"]
   - ["^(Hybrid-CBM_).*(_Baseline_).*$", "Hybrid-CBM (Baseline)"]
   - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
+  - ["^(DNN_).*$", "DNN (Baseline)"]
   - ["^(IntCEM_).*(_Baseline).*$", "IntCEM (Baseline)"]
   - ["^(MixCEM_).*(_Baseline).*$", "MixCEM (Baseline)"]
 
@@ -99,15 +100,15 @@ shared_params:
 
 runs:
   - architecture: 'ProbabilisticConceptBottleneckModel'
-    run_name: "ProbCBM_cwl_{concept_loss_weight}"
+    run_name: "ProbCBM_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_cwl_{concept_loss_weight}"
     n_samples_inference: 50
     use_neg_concept: True
     pred_class: True
     init_negative_scale: 5
     init_shift: 5
     pretrained: True
-    hidden_dim: 16
-    class_hidden_dim: 128
+    hidden_dim: [16] #, 32]
+    class_hidden_dim: [32, 64] #128
     intervention_prob: 0.5
     gradient_clip_val: 2.0
     max_concept_epochs: 50
@@ -122,6 +123,8 @@ runs:
     optimizer: adam
     grid_variables:
       - concept_loss_weight
+      - class_hidden_dim
+      - hidden_dim
     grid_search_mode: exhaustive
 
   - architecture: "IntAwareConceptEmbeddingModel"
@@ -148,43 +151,24 @@ runs:
     training_intervention_prob: 0.25
     embedding_activation: "leakyrelu"
 
-  - architecture: 'MixingConceptEmbeddingModel'
-    run_name: "MixCEM_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_mix_{mix_ground_truth_embs}_shared_{shared_emb_generator}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_Baseline_cwl_{concept_loss_weight}"
-    training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
-    emb_size: [64, 32]
-    embedding_activation: null
-    n_discovered_concepts: [50, 25]
-    concept_loss_weight: [10]
-    contrastive_loss_weight: [0]
-    mix_ground_truth_embs: True
-    shared_emb_generator: [True]
-    normalize_embs: False
-    sample_probs: False
-    cond_discovery: False
-    intermediate_task_concept_loss: [0]
-    task_concept_loss: 1
-    intervention_task_discount: [1.01, 1.05] #, 1.5]
-    discovered_probs_entropy: 0
-    dyn_training_intervention_prob: [0.1, 0.25]
+  - architecture: 'ConceptEmbeddingModel'
+    run_name: "DNN_emb_size_{emb_size}"
+    sigmoidal_prob: True
+    emb_size: [64, 32, 16]
+    training_intervention_prob: 0
+    concept_loss_weight: 0
+    embedding_activation: "leakyrelu"
     grid_variables:
-      - concept_loss_weight
-      - n_discovered_concepts
-      - contrastive_loss_weight
-      - shared_emb_generator
       - emb_size
-      - intermediate_task_concept_loss
-      - intervention_task_discount
-      - training_intervention_prob
-      - dyn_training_intervention_prob
     grid_search_mode: exhaustive
 
   - architecture: 'MixingConceptEmbeddingModel'
     run_name: "MixCEM_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_mix_{mix_ground_truth_embs}_shared_{shared_emb_generator}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_Baseline_cwl_{concept_loss_weight}"
     training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
-    emb_size: [1024, 512, 256, 128]
+    emb_size: [128, 32] #1024, 512, 256, 128] #, 32]  # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     embedding_activation: null
-    n_discovered_concepts: [0]
-    concept_loss_weight: [10, 5]
+    n_discovered_concepts: [0, 25] #50, 25] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    concept_loss_weight: [0.1, 1, 10] #, 10] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     contrastive_loss_weight: [0]
     mix_ground_truth_embs: True
     shared_emb_generator: [True]
@@ -195,7 +179,7 @@ runs:
     task_concept_loss: 1
     intervention_task_discount: [1.01, 1.05] #, 1.5]
     discovered_probs_entropy: 0
-    dyn_training_intervention_prob: [0.1] #, 0.25]
+    dyn_training_intervention_prob: [0.1] #, 0.25] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     grid_variables:
       - concept_loss_weight
       - n_discovered_concepts
